--- a/Basics/style.css
+++ b/Basics/style.css
@@ -60,11 +60,11 @@ h3{
     
     display:inline;
     margin: 25px 60px 10px 60px;
-    /* border:4px solid #CB4C4E; */
+    border:1px solid #CB4C4E;
 }
 .Printed-saree{
     
-    display:inline-block;
+    /* display:inline-block; */
     width: 200px;
     margin: 15px 80px 15px 80px;
     font-size: 20px;
@@ -73,7 +73,7 @@ h3{
 }
 .Price-Saree{
     
-    display:inline-block;
+    /* display:inline-block; */
     width: 200px;
     margin: 15px 80px 15px 80px;
     font-size: 20px;
@@ -81,8 +81,138 @@ h3{
     color: black;
     
 }
+.main-sarees div{
+    display:inline-block;
+}
 .Saree a{
     display:block;
 }
+.main-sarees div:hover{
+    border:1px solid grey;
+    margin: 25px 20px 25px 20px;
+}
+.footer-main{
+    background-color: grey;
+    margin-bottom: 0px;
+}
+.footer-main div{
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.footer-main a{
+    font-size: 20px;
+    font-family:'Courier New', Courier, monospace;
+    font-weight:bold;
+    color:white;
+    margin-left: 45px;
+    margin-right: 45px;
+}
+.footer-main p{
+    color:white;
+    margin-left: 45px;
+    margin-right: 45px;
+}
+.footer-main div:hover{
+    border:1px solid white;
+    background-color:black; 
+    color: aqua; 
+}
+.footer-about{
+    background-color:#CB4C4E;
+    margin-bottom:0px;
+}
+.Information ul{
+    list-style-type: none;
+}
+.Information ul a{
+    text-decoration: none;
+    color:white;
+    font-family: sans-serif;
+    font-size: 18px;
+}
+.Information ul li{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.Information h2{
+    margin-left:40px;
+    color:white;
+    font-size: 25px;
+    font-family: sans-serif;
 
+}
+.footer-about div{
+    display: inline-block;
+    margin-left: 20px;
+    margin-right:135px;
+}
+.Connect h2{
+    margin-left:40px;
+    color:white;
+    font-size: 25px;
+    font-family: sans-serif;
+}
+.Connect ul{
+    list-style-type: none;
+}
+.Connect ul a{
+    text-decoration: none;
+    color:white;
+    font-family: sans-serif;
+    font-size: 18px;
+}
+.Connect ul li{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.vertical-line{
+    border: 1px solid grey;
+    height: 200px;
+    margin-top:20px;
+}
+.Need h2{
+    margin-left:40px;
+    color:white;
+    font-size: 25px;
+    font-family: sans-serif;
+    margin-bottom:10px;
+}
+.Need ul{
+    list-style-type: none;
+}
+.Need ul a{
+    text-decoration: none;
+    color:white;
+    font-family: sans-serif;
+    font-size: 18px;
+}
+.Need ul li{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.copyright{
+    background-color:#CB4C4E;
+    margin-top:0px;
+}
+.copyright p{
+    margin-top:0px;
+    text-align: center;
+    color: white;
+    font-size: 18px;
+}
 
+.backtotop{
+    text-align: right;
+    font-size: 40px;
+}
+.backtotop a{
+    border: 2px solid white;
+    border-radius:5px;
+    color:white;
+}
+.backtotop a:hover{
+    opacity: 0.4;
+}
